# redefaulter

./: .justfile  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  release.yml
assets/: resources.rc
example-profiles/: 00-vrserver.toml  01-notepad.toml  99-notepad.toml
menu-macro/: Cargo.toml
menu-macro/menu-macro-impl/: Cargo.toml
menu-macro/menu-macro-impl/src/: lib.rs
menu-macro/src/: errors.rs  lib.rs
resources/: resources.rc
shadowplay-api-rs/: .justfile  Cargo.toml
shadowplay-api-rs/examples/: basic.rs
shadowplay-api-rs/src/: errors.rs  lib.rs  secret.rs  structs.rs
src/: app.rs  args.rs  errors.rs  lib.rs  main.rs  panic_handler.rs  structs.rs
src/platform/: mod.rs  windows.rs
src/platform/windows/: device_notifications.rs  device_ser.rs  devices.rs  mod.rs  policy_config.rs  shadowplay.rs
src/popups/: mod.rs  windows.rs
src/processes/: mod.rs
src/profiles/: mod.rs
src/settings/: mod.rs
src/tray_menu/: common.rs  device_ser.rs  mod.rs  updates.rs  windows.rs
src/updates/: mod.rs
