[package]
name = "redefaulter"
repository = "https://github.com/nullstalgia/redefaulter"
version = "0.1.0"
edition = "2021"

[features]
# When active, ignores user dotfiles/AppData, using the current directory instead
portable = []

[dependencies]
argh = "0.1.12"
color-eyre = "0.6.3"
image = "0.25.2"
serde = "1.0.210"
tray-icon = "0.19.0"
takeable = "0.2.2"
libc = "0.2.161"
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.0"
serde_derive = "1.0.210"
toml = "0.8.19"
thiserror = "1.0.64"
fs-err = "3.0.0"
serde_json = "1.0.132"
regex-lite = "0.1.6"
dashmap = "6.1.0"
same-file = "1.0.6"
tao = "0.30.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
tracing-log = "0.2.0"
rolling-file = "0.2.0"
human-panic = "2.0.2"
ctrlc = "3.4.5"
directories = "5.0.1"
menu-macro = { path = "menu-macro" }
enable-ansi-support = "0.2.1"
opener = { version = "0.7.2", features = ["reveal"] }
muda = "0.15.2"
serde_plain = "1.0.2"
derivative = "2.2.0"
sha2 = "0.10.8"
self-replace = "1.5.0"
tempfile = "3.14.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
http = "1.1.0"
# confique = { version = "0.3.0", features = ["toml"] }

[target.'cfg(windows)'.dependencies]
wasapi = { git = "https://github.com/nullstalgia/wasapi-rs", branch = "feat/usability-improvements" }
windows-core = { version = "0.57.0" }
windows-result = "0.2.0"
wmi = "0.14.0"
win-msgbox = "0.2.1"
self_update = { version = "0.41.0", features = [
    "compression-zip-bzip2",
    "compression-zip-deflate",
] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.57.0"
features = [
    "implement",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell_PropertiesSystem",
]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.4"

# [target.'cfg(unix)'.dependencies]
# self_update = { version = "0.41.0", features = ["compression-flate2"] }

# [lints.clippy]
# pedantic = "deny"
# nursery = "deny"

# pedantic = { level = "deny", priority = -1 }
# nursery = { level = "deny", priority = -1 }
# enum_glob_use = "allow"
