[package]
name = "redefaulter"
version = "0.1.0"
license = "MIT"
description = "Enforce a set of Default Audio Devices on Windows, with per-app overrides"
keywords = ["windows", "audio"]
categories = ["multimedia::audio"]
repository = "https://github.com/nullstalgia/redefaulter"
edition = "2021"

[features]
# default = ["self-replace"]
# When active, ignores user dotfiles/AppData, using the current directory instead
portable = []
# When active, allows the executable to download updates and replace itself
self-replace = ["dep:self-replace"]

[dependencies]
argh = "0.1.12"
color-eyre = "0.6.3"
image = "0.25.2"
serde = "1.0.210"
tray-icon = "0.19.0"
takeable = "0.2.2"
libc = "0.2.161"
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.0"
serde_derive = "1.0.210"
toml = "0.8.19"
thiserror = "1.0.64"
fs-err = "3.0.0"
serde_json = "1.0.132"
regex-lite = "0.1.6"
dashmap = "6.1.0"
same-file = "1.0.6"
tao = "0.31.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
tracing-log = "0.2.0"
rolling-file = "0.2.0"
human-panic = "2.0.2"
ctrlc = "3.4.5"
directories = "5.0.1"
menu-macro = { path = "menu-macro" }
enable-ansi-support = "0.2.1"
opener = { version = "0.7.2", features = ["reveal"] }
muda = "0.15.2"
serde_plain = "1.0.2"
derivative = "2.2.0"
sha2 = "0.10.8"
self-replace = { version = "1.5.0", optional = true }
tempfile = "3.14.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
http = "1.1.0"
rfd = "0.15.0"
auto-launch = "0.5.0"
serde-inline-default = "0.2.2"
# confique = { version = "0.3.0", features = ["toml"] }

[target.'cfg(windows)'.dependencies]
wasapi = "0.16.0"
windows-core = "0.59.0"
windows-result = "0.3.0"
wmi = "0.14.0"
win-msgbox = "0.2.1"
self_update = { version = "0.41.0", features = [
    "compression-zip-bzip2",
    "compression-zip-deflate",
] }
shadowplay = { path = "shadowplay-api-rs" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.59.0"
features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.4"

# [target.'cfg(unix)'.dependencies]
# self_update = { version = "0.41.0", features = ["compression-flate2"] }

# [lints.clippy]
# pedantic = "deny"
# nursery = "deny"

# pedantic = { level = "deny", priority = -1 }
# nursery = { level = "deny", priority = -1 }
# enum_glob_use = "allow"
