[package]
name = "shadowplay"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.132"
thiserror = "2.0.3"
windows = { version = "0.60.0", features = ["Win32_System_Memory"] }
windows-result = "0.3.0"
# oneshot = "0.1.8"

# [lints.clippy]
# pedantic = "deny"
# nursery = "deny"
